# hpc

./: LICENSE  install_vim.sh  merge_conflict.txt  vimrc
bash/: bashrc  install_bash.sh
bash/run_script_level0/: create_run.sh
bash/run_script_level1/: create_runs.sh
bash/run_script_level2/: create_runs.sh
bash/run_script_level2/my_program_src/: my_program.sh
c++/0_input/: CMakeLists.txt  main.cpp
cpp/algorithm/: CMakeLists.txt  main.cpp
cpp/anova/: CMakeLists.txt  anova.out.R  generate.aov.txt.sh  main.cpp  run_mpi.sh  summary.cpp  summary.h
cpp/control_flow/: CMakeLists.txt  main.cpp
cpp/errors/compile_time/: CMakeLists.txt  main.cpp  main2.cpp
cpp/errors/run_time/: CMakeLists.txt  main.cpp
cpp/function/: CMakeLists.txt  main.cpp
cpp/gsl_example/: CMakeLists.txt  main.cpp
cpp/hello_world/: CMakeLists.txt  main.cpp
cpp/input/: CMakeLists.txt  main.cpp
cpp/jacobi/: CMakeLists.txt  jacobi.cpp  jacobi.h  main.cpp
cpp/mpi/: CMakeLists.txt  main.cpp
cpp/multiple_files/: CMakeLists.txt  main.cpp  my_functions.cpp
cpp/probabilistic_pi/: CMakeLists.txt  main.cpp  submit.sh
cpp/random_numbers/: CMakeLists.txt  main.cpp
cpp/slingshot/: CMakeLists.txt  main.cpp  plot.gp  regen.sh
cpp/static_analyzer/: CMakeLists.txt  analyze.sh  main.cpp
cpp/structure/: CMakeLists.txt  main.cpp
cpp/threading/: CMakeLists.txt  main.cpp  main_openmp.cpp
cpp/variables/: CMakeLists.txt  main.cpp
cpp/vector_fill/: CMakeLists.txt  main.cpp
cpp/vector_triad/: CMakeLists.txt  main.cpp
slides/: encrypt.sh
vim/: install_vim.sh  vimrc
vim/example_cpp/: CMakeLists.txt  main.cpp
