CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(gsl_example)

SET( CMAKE_BUILD_TYPE DEBUG )

SET( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_CXX_FLAGS} -march=native" )
SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -pedantic -D_GLIBCXX_DEBUG -fsanitize=address" )
SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}" )

SET( CMAKE_CXX_STANDARD 14 )

#SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin )
#SET( LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib )

SET( CMAKE_EXPORT_COMPILE_COMMANDS on )

FIND_PACKAGE(GSL REQUIRED)
ADD_EXECUTABLE(bin_gsl_example main.cpp)

#TARGET_INCLUDE_DIRECTORIES( bin_gsl_example )
TARGET_LINK_LIBRARIES( bin_gsl_example ${GSL_LIBRARIES})
#TARGET_LINK_LIBRARIES( bin_gsl_example gsl gslcblas)
