CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(probabilistic_pi)

SET( CMAKE_BUILD_TYPE RELEASE )

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS} -march=native -fopenmp" )
SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -pedantic -D_GLIBCXX_DEBUG -fsanitize=address" )
SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}" )

SET( CMAKE_CXX_STANDARD 14 )

#SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin )
#SET( LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib )

SET( CMAKE_EXPORT_COMPILE_COMMANDS on )

ADD_EXECUTABLE(bin_probabilistic_pi main.cpp)

#TARGET_INCLUDE_DIRECTORIES( bin_probabilistic_pi )
#TARGET_LINK_LIBRARIES( bin_probabilistic_pi )
