CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(vector)

SET( CMAKE_BUILD_TYPE DEBUG )
option( USE_ADDRESS_SANITIZER on)
option( USE_LIBRARY_ACCESS_CHECK off)


SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -fopenmp" )

SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -pedantic" )
if ( ${USE_ADDRESS_SANITIZER} )
  SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address" )
endif()
if ( ${USE_LIBRARY_ACCESS_CHECK} )
  SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_GLIBCXX_DEBUG" )
endif()

SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}" )

SET( CMAKE_CXX_STANDARD 14 )

#SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin )
#SET( LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib )

SET( CMAKE_EXPORT_COMPILE_COMMANDS on )

ADD_EXECUTABLE(bin_vector main.cpp)

#TARGET_INCLUDE_DIRECTORIES( bin_vector )
#TARGET_LINK_LIBRARIES( bin_vector )

